# Jersey_IceCream_Solution

./: .env.example  .gitignore  LICENSE  Makefile  PRODUCTION_ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
ai/models/forecasting/: swarm_intelligence.py  xgboost_model.py
ai/models/mood/: scoring_engine.py
ai/models/yolo/: inference.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: auth.py  distributors.py  router.py
backend/app/core/: __init__.py  cache.py  events.py  exceptions.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  cart.py  distributor.py  forecast.py  order.py  product.py  user.py
backend/app/repositories/: __init__.py  base.py  cart_repository.py  distributor_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  cart.py  cart_schema.py  common.py  distributor.py
backend/app/services/: __init__.py  auth_service.py  distributor_service.py
backend/app/utils/: __init__.py  pagination.py  validators.py
backend/app/workers/: photo_processor.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth_service.py
frontend/: app.js  index.html  pitch-deck.html  styles.css
infra/docker/postgres/: init.sql
infra/k8s/base/: backend-deployment.yaml
infra/k8s/monitoring/prometheus/: prometheus.yml
