[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jersey-ice-cream-platform"
version = "0.1.0"
description = "AI-Powered Ice Cream Demand Intelligence Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Jersey Ice Cream", email = "engineering@jerseyicecream.com"},
]

dependencies = [
    # ─── Web Framework ───────────────────────────────────────────────────
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "gunicorn>=22.0.0,<23.0.0",
    "python-multipart>=0.0.9",

    # ─── Database ────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "geoalchemy2>=0.15.0,<1.0.0",

    # ─── Caching & Queue ─────────────────────────────────────────────────
    "redis[hiredis]>=5.0.0,<6.0.0",
    "aiokafka>=0.11.0,<1.0.0",

    # ─── Object Storage ──────────────────────────────────────────────────
    "minio>=7.2.0,<8.0.0",

    # ─── Auth & Security ─────────────────────────────────────────────────
    "pyjwt[crypto]>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",

    # ─── Validation & Serialization ──────────────────────────────────────
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "email-validator>=2.1.0",
    "phonenumbers>=8.13.0",

    # ─── HTTP Client ─────────────────────────────────────────────────────
    "httpx>=0.27.0,<1.0.0",

    # ─── Observability ───────────────────────────────────────────────────
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "structlog>=24.1.0,<25.0.0",

    # ─── Utilities ───────────────────────────────────────────────────────
    "python-geohash>=0.8.5",
    "shapely>=2.0.0,<3.0.0",
    "orjson>=3.10.0,<4.0.0",
    "tenacity>=8.3.0,<9.0.0",
    "croniter>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # ─── Testing ─────────────────────────────────────────────────────────
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=25.0.0,<26.0.0",

    # ─── Code Quality ────────────────────────────────────────────────────
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "bandit>=1.7.8,<2.0.0",

    # ─── Utilities ───────────────────────────────────────────────────────
    "ipython>=8.24.0",
    "rich>=13.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

# ─── Ruff Configuration ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "S",     # bandit (security)
    "B",     # bugbear
    "A",     # builtins shadowing
    "C4",    # comprehensions
    "DTZ",   # datetime timezone
    "T20",   # print statements
    "SIM",   # simplify
    "TCH",   # type checking imports
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert used (needed in tests)
    "S104",  # binding to all interfaces
    "B008",  # function call in default arg (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"alembic/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ─── Pytest Configuration ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require running services)",
    "e2e: End-to-end tests",
    "slow: Tests that take a long time to run",
]

# ─── MyPy Configuration ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "geohash.*",
    "minio.*",
    "aiokafka.*",
    "geoalchemy2.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

# ─── Bandit Configuration ───────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
